<resources>
    <string name="app_name">Albums</string>
    <string name="bt_exit_guider">Enter the album</string>
    <string name="tv_item_staggered_desc">Date</string>
    <string name="no_mounted">No Mounted</string>
    <string name="loading">Loading...</string>
    <string name="no_photos">No Photo</string>
    <string name="select_album">Select Album</string>
    <string name="all_photos">All Photos</string>
    <string name="album">Albums</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="local_photos">Locals</string>
    <string name="delete_those">Delete</string>

    <string name="one_key_share">One Key Share</string>
    <string name="share_Album">Share to Albums</string>

    <string name="delete_cancel">Cancel</string>

    <string name="btn_share">Share to</string>
</resources>
