<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/menu_share_album"
        style="@style/option_style"
        android:text="@string/share_Album"
        android:textColor="@color/color_blue" />

    <Button
        android:id="@+id/menu_share_onkey"
        style="@style/option_style"
        android:text="@string/one_key_share"
        android:textColor="@color/color_blue" />

    <Button
        android:id="@+id/menu_cancel"
        style="@style/option_style"
        android:text="@string/delete_cancel"
        android:textColor="@color/color_blue" />
</LinearLayout>